--- a/portality/templates/leaps/policy.html
+++ b/portality/templates/leaps/policy.html
@@ -2,10 +2,15 @@
 
 {% block content %}
 
+<div id="logo">
+    <img src="/static/leaps_banner.png" alt="A group of students from the Lothians Equal Access Programme for Schools" title="A group of students from the Lothians Equal Access Programme for Schools" />
+</div>
+
 <div class="row-fluid">
     <div class="span12">
 
         <h1>Privacy Policy</h1>
+        <br>
 
         <h2>About LEAPS</h2>
         
@@ -27,14 +32,10 @@
         
         <ul>
             <li>To administer your involvement in the LEAPS programme (including our events).</li>
-            <li>To provide you with personalised information, advice and guidance regarding your current, Further and
-Higher Education.</li>
-            <li>To inform you of information, activities and events that may support your interest in and transition to
-Further and Higher Education.</li>
-            <li>To inform UCAS and Further and Higher Education Institutions in the UK and abroad of your engagement in the LEAPS
-programme.</li>
-            <li>To undertake research, analysis and reporting to support the ongoing evaluation and development of the
-LEAPS programme.</li>
+            <li>To provide you with personalised information, advice and guidance regarding your current, Further and Higher Education.</li>
+            <li>To inform you of information, activities and events that may support your interest in and transition to Further and Higher Education.</li>
+            <li>To inform UCAS and Further and Higher Education Institutions in the UK and abroad of your engagement in the LEAPS programme.</li>
+            <li>To undertake research, analysis and reporting to support the ongoing evaluation and development of the LEAPS programme.</li>
         </ul>
 
         <p>LEAPS uses external companies to process information about you in order to facilitate communications. We use
@@ -57,7 +58,7 @@ LEAPS programme.</li>
             <li>Your school.</li>
             <li>Further and Higher Education Institutions in the UK and abroad.</li>
             <li>Organisations involved in co-delivering LEAPS events. (These organisations will be outlined when you register
-for LEAPS events, or as soon as possible thereafter).</li>
+            for LEAPS events, or as soon as possible thereafter).</li>
             <li>Skills Development Scotland.</li>
             <li>UCAS</li>
         </ul>
