--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -831,7 +831,7 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
 	    <div class="col-sm-8">
           <div class="row">
             <div class="col-sm-12">
-            		<input type="checkbox" name="claimed_first_attending_university"> You would be first in your family to attend university<br>
+            		<input type="checkbox" name="claimed_first_attending_university"> You would be first in your family to attend university<br><br>
             </div>
           </div>
           <div class="row">
@@ -839,13 +839,13 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
             		<input type="checkbox" name="claimed_law_application"> You are applying to study Law<br><br>
             		<input type="checkbox" name="claimed_early_application"> You are making an early application<br><br>
                 <input type="checkbox" name="claimed_hn_only_candidate"> You are an HN only candidate<br><br>
-            		<input type="checkbox" name="claimed_looked_after_child"> You are a looked after child<br>
+            		<input type="checkbox" name="claimed_looked_after_child"> You are a looked after child<br><br>
             </div>
             <div class="col-sm-6">
             		<input type="checkbox" name="claimed_low_income_family"> You are from a low income family<br><br>
             		<input type="checkbox" name="claimed_young_carer"> You look after someone else in your family<br><br>
                 <input type="checkbox" name="claimed_estranged"> You are estranged from your family<br><br>
-                <input type="checkbox" name="claimed_transition_course"> You are on a transition course<br>
+                <input type="checkbox" name="claimed_transition_course"> You are on a transition course<br><br>
             </div>
           </div>
           <div class="row">
