--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -851,11 +851,11 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
           <div class="row">
             <div class="col-sm-6">
                 <input type="checkbox" name="claimed_summer_school"> You are interested in LEAPS Summer school<br><br>
-                <input type="checkbox" name="claimed_summer_school_applicant"> You have applied to LEAPS Summer school
+                <input type="checkbox" name="claimed_summer_school_applicant"> You have applied to LEAPS Summer school<br><br>
             </div>
             <div class="col-sm-6">
 								<input type="checkbox" name="claimed_simd20" id="claimed_simd20"> You live in an SIMD 20 post code<br><br>
-								<input type="checkbox" name="claimed_simd40" id="claimed_simd40"> You live in an SIMD 40 post code
+								<input type="checkbox" name="claimed_simd40" id="claimed_simd40"> You live in an SIMD 40 post code<br><br>
             </div>
           </div>
 	    </div>
