--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -831,7 +831,7 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
 	    <div class="col-sm-8">
           <div class="row">
             <div class="col-sm-12">
-            		<input type="checkbox" name="claimed_first_attending_university"> You would be first in your family to attend university<br><br>
+            		<input type="checkbox" name="claimed_first_attending_university" style="margin-top:-5px;"> You would be first in your family to attend university<br><br>
             </div>
           </div>
           <div class="row">
