--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -831,31 +831,31 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
 	    <div class="col-sm-8">
           <div class="row">
             <div class="col-sm-12">
-            		<input type="checkbox" name="claimed_first_attending_university" style="margin-top:-5px;"> You would be first in your family to attend university<br><br>
+            		<input type="checkbox" name="claimed_first_attending_university" style="margin-top:-3px;"> You would be first in your family to attend university<br><br>
             </div>
           </div>
           <div class="row">
             <div class="col-sm-6">
-            		<input type="checkbox" name="claimed_law_application"> You are applying to study Law<br><br>
-            		<input type="checkbox" name="claimed_early_application"> You are making an early application<br><br>
-                <input type="checkbox" name="claimed_hn_only_candidate"> You are an HN only candidate<br><br>
-            		<input type="checkbox" name="claimed_looked_after_child"> You are a looked after child<br><br>
+            		<input type="checkbox" name="claimed_law_application" style="margin-top:-3px;"> You are applying to study Law<br><br>
+            		<input type="checkbox" name="claimed_early_application" style="margin-top:-3px;"> You are making an early application<br><br>
+                <input type="checkbox" name="claimed_hn_only_candidate" style="margin-top:-3px;"> You are an HN only candidate<br><br>
+            		<input type="checkbox" name="claimed_looked_after_child" style="margin-top:-3px;"> You are a looked after child<br><br>
             </div>
             <div class="col-sm-6">
-            		<input type="checkbox" name="claimed_low_income_family"> You are from a low income family<br><br>
-            		<input type="checkbox" name="claimed_young_carer"> You look after someone else in your family<br><br>
-                <input type="checkbox" name="claimed_estranged"> You are estranged from your family<br><br>
-                <input type="checkbox" name="claimed_transition_course"> You are on a transition course<br><br>
+            		<input type="checkbox" name="claimed_low_income_family" style="margin-top:-3px;"> You are from a low income family<br><br>
+            		<input type="checkbox" name="claimed_young_carer" style="margin-top:-3px;"> You look after someone else in your family<br><br>
+                <input type="checkbox" name="claimed_estranged" style="margin-top:-3px;"> You are estranged from your family<br><br>
+                <input type="checkbox" name="claimed_transition_course" style="margin-top:-3px;"> You are on a transition course<br><br>
             </div>
           </div>
           <div class="row">
             <div class="col-sm-6">
-                <input type="checkbox" name="claimed_summer_school"> You are interested in LEAPS Summer school<br><br>
-                <input type="checkbox" name="claimed_summer_school_applicant"> You have applied to LEAPS Summer school<br><br>
+                <input type="checkbox" name="claimed_summer_school" style="margin-top:-3px;"> You are interested in LEAPS Summer school<br><br>
+                <input type="checkbox" name="claimed_summer_school_applicant" style="margin-top:-3px;"> You have applied to LEAPS Summer school<br><br>
             </div>
             <div class="col-sm-6">
-								<input type="checkbox" name="claimed_simd20" id="claimed_simd20"> You live in an SIMD 20 post code<br><br>
-								<input type="checkbox" name="claimed_simd40" id="claimed_simd40"> You live in an SIMD 40 post code<br><br>
+								<input type="checkbox" name="claimed_simd20" id="claimed_simd20" style="margin-top:-3px;"> You live in an SIMD 20 post code<br><br>
+								<input type="checkbox" name="claimed_simd40" id="claimed_simd40" style="margin-top:-3px;"> You live in an SIMD 40 post code<br><br>
             </div>
           </div>
 	    </div>
