--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -314,7 +314,7 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
 	    <div class="col-sm-12">
 	        <p>You must complete all of the six parts below. Please have details of your qualifications, personal 
 	        interests, work experience, and possible University or College applications to hand before you start.
-	        You will also be asked about your eligibility - please watch our 
+	        You will also be asked about your eligibility - please view our 
 	        <a target="_blank" href="https://leapsonline.org/node/1602">What is LEAPS?</a> introduction to learn more.
 	        It should take no more than 30 minutes to complete, if you prepare in advance.
 	        You can find out how we use and what we do with your personal data <a target="_blank" href="/policy">here</a>.</p>
