--- a/portality/templates/leaps/index.html
+++ b/portality/templates/leaps/index.html
@@ -9,7 +9,7 @@
   <div class="row-fluid">
     <div class="span4">
   		<img style="width:100%; margin-bottom:50px;" src="/static/leaps_logo_cropped.png" alt="Lothians Equal Access Programme for Schools Logo" title="Lothians Equal Access Programme for Schools Logo">
-  		<a target="_blank" class="btn btn-info" style="width:100%;" href="https://leapsonline.org/node/1602">Learn more about LEAPS</a>
+  		<a target="_blank" class="btn btn-info" style="width:100%;" href="https://leapsonline.org/node/1602">Learn more about LEAPS</a><br>
   		<a class="btn btn-primary" style="width:100%;" href="/survey">start the survey form</a>
     </div>
 
