--- a/portality/templates/leaps/policy.html
+++ b/portality/templates/leaps/policy.html
@@ -13,7 +13,7 @@
         <br>
 
         <h2>About LEAPS</h2>
-        
+
         <p>LEAPS is a successful and unique widening participation programme, funded by its 
         <a href="http://www.leapsonline.org/node/1089">higher education institution and
         local council partners</a> to increase progression to higher education in South East Scotland. We aim to encourage and
@@ -34,7 +34,8 @@
             <li>To administer your involvement in the LEAPS programme (including our events).</li>
             <li>To provide you with personalised information, advice and guidance regarding your current, Further and Higher Education.</li>
             <li>To inform you of information, activities and events that may support your interest in and transition to Further and Higher Education.</li>
-            <li>To inform UCAS and Further and Higher Education Institutions in the UK and abroad of your engagement in the LEAPS programme.</li>
+            <li>To inform UCAS and Further and Higher Education Institutions in the UK and abroad of your engagement in the LEAPS programme.
+            This includes your LEAPS eligibility status (if confirmed) being included on your UCAS application, for Higher Education Institutions to see.</li>
             <li>To undertake research, analysis and reporting to support the ongoing evaluation and development of the LEAPS programme.</li>
         </ul>
 
@@ -77,4 +78,3 @@
 </div>
 
 {% endblock %}
-
