--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -830,7 +830,7 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
 	    <div class="col-sm-4">
           <p>Please indicate which of these criteria applies to make you LEAPS eligible. These will be discussed
           and confirmed at your interview.</p>
-          <p id="can_claim_simd" style="display: none;">(Your SIMD post code eligibility has already been set for you, based on the post code you provided above.)</p>
+          <!--<p id="can_claim_simd" style="display: none;">(Your SIMD post code eligibility has already been set for you, based on the post code you provided above.)</p>-->
 	    </div>
 	    <div class="col-sm-8">
       		<input type="checkbox" name="claimed_first_attending_university" style="margin-top:-3px;">
