--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -1073,71 +1073,62 @@ fieldset{
                 		<td style="width:230px;{% if record %}{% if record.data.claimed_first_attending_university %}text-decoration:underline;{% endif %}{% endif %}"><input type="checkbox" name="first_attending_university"
                 		{% if record %}{% if record.data.first_attending_university %} checked="checked"{% endif %}{% endif %}
                 		> First attending university</td>
-
                 		<td style="width:250px;"><input type="checkbox" name="law_application"
                 		{% if record %}{% if record.data.law_application %} checked="checked"{% endif %}{% endif %}
                 		> Law application</td>
-
                 		<td><input type="checkbox" name="early_application"
                 		{% if record %}{% if record.data.early_application %} checked="checked"{% endif %}{% endif %}
-                		> Early application
-                		</td>
-
+                		> Early application</td>
                         <td><input type="checkbox" name="hn_only_candidate"
                 		{% if record %}{% if record.data.hn_only_candidate %} checked="checked"{% endif %}{% endif %}
-                		> HN only candidate
-                		</td>
+                		> HN only candidate</td>
                     </tr>
         	        <tr>
                 		<td{% if record %}{% if record.data.claimed_looked_after_child %} style="text-decoration:underline;"{% endif %}{% endif %}><input type="checkbox" name="looked_after_child"
                 		{% if record %}{% if record.data.looked_after_child %} checked="checked"{% endif %}{% endif %}
                 		> Looked after child</td>
-
                 		<td{% if record %}{% if record.data.claimed_low_income_family %} style="text-decoration:underline;"{% endif %}{% endif %}><input type="checkbox" name="low_income_family"
                 		{% if record %}{% if record.data.low_income_family %} checked="checked"{% endif %}{% endif %}
                 		> Low income family</td>
-
                 		<td{% if record %}{% if record.data.claimed_young_carer %} style="text-decoration:underline;"{% endif %}{% endif %}><input type="checkbox" name="young_carer"
                 		{% if record %}{% if record.data.young_carer %} checked="checked"{% endif %}{% endif %}
                 		> Young carer</td>
-
                 		<td><input type="checkbox" name="previous_interview"
                 		{% if record %}{% if record.data.previous_interview %} checked="checked"{% endif %}{% endif %}
                 		> Previous interview</td>
-
                     </tr>
                     <tr style="height:40px;">
 						<td><input type="checkbox" name="simd20"
 						{% if record %}{% if record.data.simd20 %} checked="checked"{% endif %}{% endif %}
-						> SIMD 20
-                		</td>
+						> SIMD 20</td>
 						<td><input type="checkbox" name="simd40"
 						{% if record %}{% if record.data.simd40 %} checked="checked"{% endif %}{% endif %}
-						> SIMD 40
-                		</td>
+						> SIMD 40</td>
                         <td><input type="checkbox" name="summer_school"
             		    {% if record %}{% if record.data.summer_school %}{% if record.data.summer_school == "yes" %} checked="checked"{% endif %}{% endif %}{% endif %}
-            		    > Summer school interest
-                		<br>
-                        <input type="checkbox" name="summer_school_applicant"
-            		    {% if record %}{% if record.data.summer_school_applicant %}{% if record.data.summer_school_applicant == "yes" %} checked="checked"{% endif %}{% endif %}{% endif %}
-            		    > Summer school applicant
-                		<br>
-                		</td>
-                        <td><input type="checkbox" name="estranged"
+            		    > Summer school interest</td>
+                        <td{% if record %}{% if record.data.claimed_estranged %} style="text-decoration:underline:"{% endif %}{% endif %}><input type="checkbox" name="estranged"
             		    {% if record %}{% if record.data.estranged %} checked="checked"{% endif %}{% endif %}
-            		    > <span{% if record %}{% if record.data.claimed_estranged %} style="text-decoration:underline:"{% endif %}{% endif %}>Estranged</span>
-                		<br>
-                        <input type="checkbox" name="transition_course"
-            		    {% if record %}{% if record.data.transition_course %} checked="checked"{% endif %}{% endif %}
-            		    > Transition course
-                		<br>
-                        <input type="checkbox" name="pae_action"
-            		    {% if record %}{% if record.data.pae_action %} checked="checked"{% endif %}{% endif %}
-            		    > PAE action
-                		</td>
+            		    > Estranged</td>
                     </tr>
-
+        	        <tr>
+                		<td style="width:230px;"></td>
+                		<td style="width:250px;"></td>
+                		<td><input type="checkbox" name="summer_school_applicant"
+            		    {% if record %}{% if record.data.summer_school_applicant %}{% if record.data.summer_school_applicant == "yes" %} checked="checked"{% endif %}{% endif %}{% endif %}
+            		    > Summer school applicant</td>
+                        <td><input type="checkbox" name="transition_course"
+            		    {% if record %}{% if record.data.transition_course %} checked="checked"{% endif %}{% endif %}
+            		    > Transition course</td>
+                    </tr>
+        	        <tr>
+                		<td style="width:230px;"></td>
+                		<td style="width:250px;"></td>
+                		<td></td>
+                        <td><input type="checkbox" name="pae_action"
+            		    {% if record %}{% if record.data.pae_action %} checked="checked"{% endif %}{% endif %}
+            		    > PAE action</td>
+                    </tr>
         	        <tr>
 	                    <td style="text-align:right;padding:6px 10px 0 0;">Mothers occupation</td>
 	                    <td><input type="text" name="mothers_occupation"{% if record %} value="{{ record.data.mothers_occupation }}"{% endif %}></td>
