--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -1070,7 +1070,7 @@ fieldset{
 	        <table>
 	            <tbody>
         	        <tr>
-                		<td style="width:230px;{% if record %}{% if record.data.claimed_first_attending_university %}text-decoration:underline;{% endif %}{% endif %}"><input type="checkbox" name="first_attending_university"
+                		<td style="width:230px;{% if record %}{% if record.data.claimed_first_attending_university %}text-decoration:underline;font-weight:bold;{% endif %}{% endif %}"><input type="checkbox" name="first_attending_university"
                 		{% if record %}{% if record.data.first_attending_university %} checked="checked"{% endif %}{% endif %}
                 		> First attending university</td>
                 		<td style="width:250px;"><input type="checkbox" name="law_application"
@@ -1084,13 +1084,13 @@ fieldset{
                 		> HN only candidate</td>
                     </tr>
         	        <tr>
-                		<td{% if record %}{% if record.data.claimed_looked_after_child %} style="text-decoration:underline;"{% endif %}{% endif %}><input type="checkbox" name="looked_after_child"
+                		<td{% if record %}{% if record.data.claimed_looked_after_child %} style="text-decoration:underline;font-weight:bold;"{% endif %}{% endif %}><input type="checkbox" name="looked_after_child"
                 		{% if record %}{% if record.data.looked_after_child %} checked="checked"{% endif %}{% endif %}
                 		> Looked after child</td>
-                		<td{% if record %}{% if record.data.claimed_low_income_family %} style="text-decoration:underline;"{% endif %}{% endif %}><input type="checkbox" name="low_income_family"
+                		<td{% if record %}{% if record.data.claimed_low_income_family %} style="text-decoration:underline;font-weight:bold;"{% endif %}{% endif %}><input type="checkbox" name="low_income_family"
                 		{% if record %}{% if record.data.low_income_family %} checked="checked"{% endif %}{% endif %}
                 		> Low income family</td>
-                		<td{% if record %}{% if record.data.claimed_young_carer %} style="text-decoration:underline;"{% endif %}{% endif %}><input type="checkbox" name="young_carer"
+                		<td{% if record %}{% if record.data.claimed_young_carer %} style="text-decoration:underline;font-weight:bold;"{% endif %}{% endif %}><input type="checkbox" name="young_carer"
                 		{% if record %}{% if record.data.young_carer %} checked="checked"{% endif %}{% endif %}
                 		> Young carer</td>
                 		<td><input type="checkbox" name="previous_interview"
@@ -1107,7 +1107,7 @@ fieldset{
                         <td><input type="checkbox" name="summer_school"
             		    {% if record %}{% if record.data.summer_school %}{% if record.data.summer_school == "yes" %} checked="checked"{% endif %}{% endif %}{% endif %}
             		    > Summer school interest</td>
-                        <td{% if record %}{% if record.data.claimed_estranged %} style="text-decoration:underline;"{% endif %}{% endif %}><input type="checkbox" name="estranged"
+                        <td{% if record %}{% if record.data.claimed_estranged %} style="text-decoration:underline;font-weight:bold;"{% endif %}{% endif %}><input type="checkbox" name="estranged"
             		    {% if record %}{% if record.data.estranged %} checked="checked"{% endif %}{% endif %}
             		    > Estranged</td>
                     </tr>
